--- a/project_02/index.html
+++ b/project_02/index.html
@@ -123,7 +123,7 @@
           text-align: left;
 
           &::before {
-            content: 'Figure ' counter(figure) ': ';
+            content: "Figure " counter(figure) ": ";
             font-weight: bold;
             color: var(--color-neutral-40);
           }
@@ -150,7 +150,13 @@
       </h1>
 
       <p><strong>Ketan Mittal</strong> — <em>k1mittal@ucsd.edu</em></p>
-      <p><small><a href = "https://k1mittal.github.io/portfolio/project_02/">https://k1mittal.github.io/portfolio/project_02/</a></small></p>
+      <p>
+        <small
+          ><a href="https://k1mittal.github.io/portfolio/project_02/"
+            >https://k1mittal.github.io/portfolio/project_02/</a
+          ></small
+        >
+      </p>
     </header>
 
     <main>
@@ -160,22 +166,60 @@
         <h3>FOR the Proposition</h3>
 
         <figure>
-          <img src="../images/For.png" alt="" width="950px"/>
-          <figcaption>Complaints over the Years - Emerging Trends </figcaption>
+          <img src="../images/For.png" alt="" width="950px" />
+          <figcaption>Complaints over the Years - Emerging Trends</figcaption>
         </figure>
 
         <p>Design Decisions and Rationale:</p>
 
         <ul>
-          <li><b>Grey-Red Color Scheme: (-1) </b>This color Scheme really emphasized the growth of the number of complaints while also painting a negative image of police officers. Since red is generally correlated with anger or evil, it sort of persuades the reader that this is a negative issue. I considered using other colors rather than red, such as green or blue, but red conveys the image better. It intuitively paints a negative image in the minds of the readers, thereby being persuasive. 
+          <li>
+            <b>Grey-Red Color Scheme: (-1) </b>This color Scheme really
+            emphasized the growth of the number of complaints while also
+            painting a negative image of police officers. Since red is generally
+            correlated with anger or evil, it sort of persuades the reader that
+            this is a negative issue. I considered using other colors rather
+            than red, such as green or blue, but red conveys the image better.
+            It intuitively paints a negative image in the minds of the readers,
+            thereby being persuasive.
           </li>
-          <li><b>Timeframe: (-1) </b>By using only data from 1985 to 2018, we inherently lose some information. The bar for 2019 and 2020 showed a decreased trend in the number of complaints and therefore opposes the opinion of the graph. So making the decision to remove the years from the visualization is deceptive as it portrays the number of complaints as increasing till this day. It ultimately persuades the reader that the rising number of complaints is an issue. I also tried getting rid of 2018, but the more recent years really help strike a chord and are more persuasive. 
+          <li>
+            <b>Timeframe: (-1) </b>By using only data from 1985 to 2018, we
+            inherently lose some information. The bar for 2019 and 2020 showed a
+            decreased trend in the number of complaints and therefore opposes
+            the opinion of the graph. So making the decision to remove the years
+            from the visualization is deceptive as it portrays the number of
+            complaints as increasing till this day. It ultimately persuades the
+            reader that the rising number of complaints is an issue. I also
+            tried getting rid of 2018, but the more recent years really help
+            strike a chord and are more persuasive.
           </li>
-          <li><b>Title: (-2) </b>The title is a clear use of deceptive tactics. It states an idea that cannot be confirmed by the graph, but points the readers in a certain direction. It uses exclamation marks and strong words to try to guide the reader to the idea that police officers are violent and get loads of complaints. Other titles can be effective, but I think a simple, minimal title conveys the point the best. 
+          <li>
+            <b>Title: (-2) </b>The title is a clear use of deceptive tactics. It
+            states an idea that cannot be confirmed by the graph, but points the
+            readers in a certain direction. It uses exclamation marks and strong
+            words to try to guide the reader to the idea that police officers
+            are violent and get loads of complaints. Other titles can be
+            effective, but I think a simple, minimal title conveys the point the
+            best.
           </li>
-          <li><b>Scale: (1) </b>The scale of the graph is from the lowest number of complaints (around 0) to the highest number of complaints (plus a margin). Although not inherently evil and deceptive, it does a great job emphasizing the large difference between earlier-year complaints and more current complaints. It is not deceptive but is an earnest and effective persuasive method. Other scaling methods do not seem as persuasive as this one. 
+          <li>
+            <b>Scale: (1) </b>The scale of the graph is from the lowest number
+            of complaints (around 0) to the highest number of complaints (plus a
+            margin). Although not inherently evil and deceptive, it does a great
+            job emphasizing the large difference between earlier-year complaints
+            and more current complaints. It is not deceptive but is an earnest
+            and effective persuasive method. Other scaling methods do not seem
+            as persuasive as this one.
           </li>
-          <li><b>Grid Marking: (-1) </b>Getting rid of the grid markings in this visualization makes it really hard to compare the counts of the earlier years to more current years. This not only deceptively mentally inflates the differences between years, but also inflates the idea that cops have been getting more complaints and therefore violent. Other ideas involve using thin grid markings, but it doesn’t have the same emphasis as no grid markings. 
+          <li>
+            <b>Grid Marking: (-1) </b>Getting rid of the grid markings in this
+            visualization makes it really hard to compare the counts of the
+            earlier years to more current years. This not only deceptively
+            mentally inflates the differences between years, but also inflates
+            the idea that cops have been getting more complaints and therefore
+            violent. Other ideas involve using thin grid markings, but it
+            doesn’t have the same emphasis as no grid markings.
           </li>
         </ul>
       </section>
@@ -184,20 +228,59 @@
         <h3>AGAINST the Proposition</h3>
 
         <figure>
-          <img src="../images/Against.png" alt="" width="950px"/>
+          <img src="../images/Against.png" alt="" width="950px" />
           <figcaption>Complaints Per Officer - Consistent Trend</figcaption>
         </figure>
 
         <p>Design Decisions and Rationale:</p>
 
         <ul>
-          <li><b>Green Color Scheme: (-0.5) </b>The green color scheme corresponds to goodness/correctness, so the usage of the color scheme corresponds to police officers and good together. Although it might be counted as deceptive, it is still a kind of neutral way of being persuasive. I also thought of doing a gradient where points higher up were red and lower were green, but that made the visualization more convoluted and harder to understand.  
+          <li>
+            <b>Green Color Scheme: (-0.5) </b>The green color scheme corresponds
+            to goodness/correctness, so the usage of the color scheme
+            corresponds to police officers and good together. Although it might
+            be counted as deceptive, it is still a kind of neutral way of being
+            persuasive. I also thought of doing a gradient where points higher
+            up were red and lower were green, but that made the visualization
+            more convoluted and harder to understand.
           </li>
-          <li><b>Data Transformation: (1) </b>The data transformation - transforming the data into complaints per officer is an earnest method to make the data normalized. In this case, it allows us to be persuasive as it shows a relatively stagnant complaints per officer and a decrease near the current time frame. I could have also used complaints per rank or something similar, but I believe that complaints per officer clearly showcase a general, consistent trend with past years. </li>
-          <li><b>Timeframe: (-1) </b>Using all the data, including data from 2020 (since 2020 data only included January), is a little deceptive as it includes the year 2020 even though the data only includes one month of 2020. The timeframe makes it seem like the number of complaints has been decreasing rapidly in recent years, and that’s a positive thing. Another way to make this not deceptive is to use only up to 2019, but utilizing 2020 data looks more persuasive, as it has a downward trend. </li>
-          <li><b>Title: (-2) </b>The title, “Improving Conduct for Police Officers!” is deceptive. It states an idea that cannot be confirmed by the graph, but points the readers in a certain direction. It uses exclamation marks and strong words to try to guide the reader to the idea that police officers have been improving in complaints. Other titles can be effective, but I think this title conveys the proper direction/emotion. 
+          <li>
+            <b>Data Transformation: (1) </b>The data transformation -
+            transforming the data into complaints per officer is an earnest
+            method to make the data normalized. In this case, it allows us to be
+            persuasive as it shows a relatively stagnant complaints per officer
+            and a decrease near the current time frame. I could have also used
+            complaints per rank or something similar, but I believe that
+            complaints per officer clearly showcase a general, consistent trend
+            with past years.
           </li>
-          <li><b>Scale: (-1) </b>The graphs’ y-axis starts at around 2 instead of 0. This is a deceptive practice in theory, as it sort of overinflates the differences between each year. Although deceptive in nature, this scale does not seem to make a difference in persuasion, it would only reinforce the idea that the complaints per officer have been stagnant. Another method would be to start the y-axis at 0, but I think this y-axis helps for readability. 
+          <li>
+            <b>Timeframe: (-1) </b>Using all the data, including data from 2020
+            (since 2020 data only included January), is a little deceptive as it
+            includes the year 2020 even though the data only includes one month
+            of 2020. The timeframe makes it seem like the number of complaints
+            has been decreasing rapidly in recent years, and that’s a positive
+            thing. Another way to make this not deceptive is to use only up to
+            2019, but utilizing 2020 data looks more persuasive, as it has a
+            downward trend.
+          </li>
+          <li>
+            <b>Title: (-2) </b>The title, “Improving Conduct for Police
+            Officers!” is deceptive. It states an idea that cannot be confirmed
+            by the graph, but points the readers in a certain direction. It uses
+            exclamation marks and strong words to try to guide the reader to the
+            idea that police officers have been improving in complaints. Other
+            titles can be effective, but I think this title conveys the proper
+            direction/emotion.
+          </li>
+          <li>
+            <b>Scale: (-1) </b>The graphs’ y-axis starts at around 2 instead of
+            0. This is a deceptive practice in theory, as it sort of
+            overinflates the differences between each year. Although deceptive
+            in nature, this scale does not seem to make a difference in
+            persuasion, it would only reinforce the idea that the complaints per
+            officer have been stagnant. Another method would be to start the
+            y-axis at 0, but I think this y-axis helps for readability.
           </li>
         </ul>
       </section>
@@ -206,14 +289,41 @@
         <h2>Final Reflection</h2>
 
         <p>
-          &emsp;&emsp;The design process across both visualizations was pretty straightforward in terms of actually creating the plots, but what made it difficult was coming up with propositions and designing graphs that could both support and argue against the same idea. That part required a lot more critical thinking than I expected, because it forced me to look at the same dataset from multiple angles. I had to be intentional not just about what data I included, but also how I framed it visually - things like color, axis scale, and chart type made a big difference in how persuasive or neutral the visual seemed.
-          <br>
-          <br>
-          &emsp;&emsp;What surprised me was the ease with which I was able to create deceptive visualizations. It was really easy to change a couple of aspects in the visualization to be deceptive, and I wonder how many visualizations I have seen that may have been deceptive. Are there any other factors that can easily create deception in visualizations? Ultimately, creating these visualizations made me realize that two sides can technically be correct at the same time, but have different contexts that make them right in their own way. 
-          <br>
-          <br>
-          &emsp;&emsp;This process changed the way I think about ethical analysis and visualization. To me now, ethical visualizations are ones that present the full picture with as much relevant context as possible, so the reader isn’t just absorbing data - they’re understanding the situation behind it. Acceptable persuasive choices are the ones that add clarity or insight while still being honest about what the data says. Misleading ones, on the other hand, are those that hide or distort context, making the viewer come to a conclusion that isn’t really supported by the data. The line between the two can be subtle, but if a visual removes more understanding than it provides, that’s when it crosses into being unethical. (e.g., including a gradient color for no reason other than to guide the reader, or creating statements that cannot be backed up by the graph)
-          </p>
+          &emsp;&emsp;The design process across both visualizations was pretty
+          straightforward in terms of actually creating the plots, but what made
+          it difficult was coming up with propositions and designing graphs that
+          could both support and argue against the same idea. That part required
+          a lot more critical thinking than I expected, because it forced me to
+          look at the same dataset from multiple angles. I had to be intentional
+          not just about what data I included, but also how I framed it visually
+          - things like color, axis scale, and chart type made a big difference
+          in how persuasive or neutral the visual seemed.
+          <br />
+          <br />
+          &emsp;&emsp;What surprised me was the ease with which I was able to
+          create deceptive visualizations. It was really easy to change a couple
+          of aspects in the visualization to be deceptive, and I wonder how many
+          visualizations I have seen that may have been deceptive. Are there any
+          other factors that can easily create deception in visualizations?
+          Ultimately, creating these visualizations made me realize that two
+          sides can technically be correct at the same time, but have different
+          contexts that make them right in their own way.
+          <br />
+          <br />
+          &emsp;&emsp;This process changed the way I think about ethical
+          analysis and visualization. To me now, ethical visualizations are ones
+          that present the full picture with as much relevant context as
+          possible, so the reader isn’t just absorbing data - they’re
+          understanding the situation behind it. Acceptable persuasive choices
+          are the ones that add clarity or insight while still being honest
+          about what the data says. Misleading ones, on the other hand, are
+          those that hide or distort context, making the viewer come to a
+          conclusion that isn’t really supported by the data. The line between
+          the two can be subtle, but if a visual removes more understanding than
+          it provides, that’s when it crosses into being unethical. (e.g.,
+          including a gradient color for no reason other than to guide the
+          reader, or creating statements that cannot be backed up by the graph)
+        </p>
       </section>
     </main>
     <!-- THE WEBPAGE CAN BE FOUND AT https://k1mittal.github.io/portfolio/project_02/-->
