--- a/meta/index.html
+++ b/meta/index.html
@@ -10,43 +10,45 @@
     <script type="module" src="../global.js"></script>
     <script type="module" src="main.js"></script>
     <h1>Meta Page</h1>
-    <h2>Commits by time of day</h2>
-    <div id="scaler">
-      <label>
-        Show commits until:
-        <input
-          type="range"
-          id="scale-commit-progress"
-          min="0"
-          max="100"
-          value="100"
-        />
-        <time id="scale-commit-time"></time>
-      </label>
-    </div>
-    <dl id="files"></dl>
-    <div id="chart"></div>
-    <dl id="commit-tooltip" class="info tooltip" hidden>
-      <dt>Commit</dt>
-      <dd>
-        <a href="" id="commit-link" target="_blank"></a>
-      </dd>
-
-      <dt>Date</dt>
-      <dd id="commit-date"></dd>
-
-      <!-- Add: Time, author, lines edited -->
-      <dt>Time</dt>
-      <dd id="commit-time"></dd>
-
-      <dt>Author</dt>
-      <dd id="commit-author"></dd>
-
-      <dt>Lines Edited</dt>
-      <dd id="commit-lines"></dd>
-    </dl>
-    <p id="selection-count">No commits selected</p>
-    <dl id="language-breakdown" class="stats"></dl>
     <div id="stats"></div>
+    <div id="scrolly-1">
+      <div id="scatter-story">
+        <h2>Evolution Over Time</h2>
+      </div>
+      <div id="scatter-plot">
+        <h2>Commits by time of day</h2>
+        <div id="chart"></div>
+        <dl id="commit-tooltip" class="info tooltip" hidden>
+          <dt>Commit</dt>
+          <dd>
+            <a href="" id="commit-link" target="_blank"></a>
+          </dd>
+
+          <dt>Date</dt>
+          <dd id="commit-date"></dd>
+
+          <!-- Add: Time, author, lines edited -->
+          <dt>Time</dt>
+          <dd id="commit-time"></dd>
+
+          <dt>Author</dt>
+          <dd id="commit-author"></dd>
+
+          <dt>Lines Edited</dt>
+          <dd id="commit-lines"></dd>
+        </dl>
+        <p id="selection-count">No commits selected</p>
+        <dl id="language-breakdown" class="stats"></dl>
+      </div>
+    </div>
+    <div id="scrolly-2">
+      <div id="commit-plot">
+        <h2>Codebase Evolution</h2>
+        <dl id="files"></dl>
+      </div>
+      <div id="commit-story">
+        <h2>Evolution Over Time</h2>
+      </div>
+    </div>
   </body>
 </html>
